Job Orchestrator/src/objects/BatchManager_Log__c.object
<CustomObject>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <label>Job Detail</label>
        <referenceTo>Job_Detail__c</referenceTo>
        <relationshipName>BatchManager_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Job_Id__c</fullName>
        <label>Trigger/Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Job Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job__c</columns>
        <columns>Status__c</columns>
        <columns>Error__c</columns>
        <columns>Trigger_Job_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BLOG-{0000}</displayFormat>
        <label>Batch Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>